fixed bottom spacing in page content

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -4,7 +4,7 @@
   display: flex;
 
   @include at-small-screen {
-    display: block;
+    flex-direction: column;
     max-height: 100vh;
     overflow: hidden;
   }
